fix(aio): update contrast on mediumgray color

--- a/aio/src/styles/1-layouts/_sidenav.scss
+++ b/aio/src/styles/1-layouts/_sidenav.scss
@@ -104,7 +104,7 @@ button.vertical-menu-item {
 }
 
 .heading {
-  color: $blue-grey-700;
+  color: $darkgray;
   cursor: pointer;
   position: relative;
   text-transform: uppercase;
