--- a/aio/src/styles/_constants.scss
+++ b/aio/src/styles/_constants.scss
@@ -22,7 +22,7 @@ $offwhite: #FAFAFA;
 $backgroundgray: #F1F1F1;
 $lightgray: #DBDBDB;
 $mist: #ECEFF1;
-$mediumgray: #7E7E7E;
+$mediumgray: #6e6e6e;
 $darkgray: #333;
 $black: #0A1014;
 $orange: #FF9800;
